fix(client): 서브메뉴가 다른 요소보다 상단에 표시되도록 `z-index` 설정

--- a/client/src/components/layout/Header.css
+++ b/client/src/components/layout/Header.css
@@ -56,6 +56,7 @@
   top: 70px;
   right: 45px;
   background-color: #f9f9f9;
+  z-index: 50;
 }
 
 .sm {
